<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create1"
        android:enabled="true"
        android:icon="@drawable/create"
        android:title="@string/text_create1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_listview1"
        android:enabled="true"
        android:icon="@drawable/listview"
        android:title="@string/text_listview1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chats"
        android:enabled="true"
        android:icon="@drawable/chats"
        android:title="@string/text_chats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />

</menu>