<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhishek.campus.frag_create1">

    <Spinner
        android:id="@+id/spinner_location1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        />

    <EditText
        android:id="@+id/time_picker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner_location1"
        android:layout_alignStart="@+id/spinner_location1"
        android:layout_below="@+id/spinner_location1"
        android:layout_marginTop="30dp"
        android:hint="@string/time1"
        android:singleLine="true"
        android:clickable="true"
        android:focusable="false" />

    <EditText
        android:id="@+id/where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner_location1"
        android:layout_alignStart="@+id/spinner_location1"
        android:layout_below="@+id/time_picker1"
        android:hint="@string/where"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:maxLines = "1"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/where"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        android:id="@+id/submit_button1"/>

</RelativeLayout>
